--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "pg-promise": "^5.4.3",
     "primus": "^6.0.5",
     "ws": "^1.1.1"
+  },
+  "devDependencies": {
+    "webpack": "beta",
+    "webpack-dev-server": "beta"
   }
 }
