--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "ws": "^1.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015-native-modules": "^6.9.4",
+    "babel-preset-react": "^6.16.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "webpack": "beta",
     "webpack-dev-server": "beta"
   }
